--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,6 @@
 <% if logged_in? %>
+  <%= current_user.nickname %>
+  <%= image_tag current_user.image_url %>
   <%= link_to 'ログアウト',logout_path %>
 <% else %>
   <%= link_to 'ログイン','auth/twitter' %>
