--- a/app/views/menus/_menu.html.erb
+++ b/app/views/menus/_menu.html.erb
@@ -1,5 +1,9 @@
-<li>
-  <span><%= menu.author %></span>
-  <span><%= menu.content %></span>
-  <%= image_tag menu.image_url %>
+<li class="panel panel-default">
+  <div class="panel panel-heading">
+    <span><%= menu.author %></span>
+  </div>
+  <div class="panel-body">
+    <span><%= menu.content %></span>
+    <%= image_tag menu.image_url %>
+  </div>
 </li>
