--- a/app/views/menus/_menu.html.erb
+++ b/app/views/menus/_menu.html.erb
@@ -1,9 +1,11 @@
-<li class="panel panel-default">
-  <div class="panel panel-heading">
-    <span><%= menu.author %></span>
-  </div>
-  <div class="panel-body">
-    <span><%= menu.content %></span>
-    <%= image_tag menu.image_url %>
-  </div>
-</li>
+<div class="col-md-4">
+  <li class="panel panel-default">
+    <div class="panel panel-heading">
+      <span><%= menu.author %></span>
+    </div>
+    <div class="panel-body">
+      <span><%= menu.content %></span>
+      <%= image_tag menu.image_url,class:"img-responsive" %>
+    </div>
+  </li>
+</div>
