--- a/app/views/menus/_menu.html.erb
+++ b/app/views/menus/_menu.html.erb
@@ -1,21 +1,24 @@
-<div class="col-md-4">
+<div id="menu_<%=menu.id%>" class="col-md-4">
   <li class="panel panel-default">
     <div class="panel panel-heading">
       <span><%= menu.author %></span>
+      <%= link_to "delete", menu, method: :delete, data: { confirm: "削除しますか?"}, remote: true %>
     </div>
     <div class="panel-body">
       <span><%= menu.content %></span>
       <%= image_tag menu.image_url,class:"img-responsive",id: "image-#{menu.id}" ,:data => { :target => "#myModal-#{menu.id}", :toggle => "modal"} %>
     </div>
   </li>
-</div>
 
-<div class="modal fade" id="myModal-<%= menu.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <%= image_tag menu.image_url, class:"img-responsive"%>
+  <div class="modal fade" id="myModal-<%= menu.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <%= image_tag menu.image_url, class:"img-responsive"%>
+        </div>
       </div>
     </div>
   </div>
+
+
 </div>
