--- a/app/views/menus/_menu.html.erb
+++ b/app/views/menus/_menu.html.erb
@@ -2,7 +2,9 @@
   <li class="panel panel-default">
     <div class="panel panel-heading">
       <span><%= menu.author %></span>
-      <%= link_to "delete", menu, method: :delete, data: { confirm: "削除しますか?"}, remote: true %>
+      <%= link_to menu, method: :delete, data: { confirm: "削除しますか?"}, remote: true  do %>
+        <span class="glyphicon glyphicon-trash pull-right"></span>
+      <% end %>
     </div>
     <div class="panel-body">
       <span><%= menu.content %></span>
