create estimate model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <%= @user.nickname %>
 <%= image_tag @user.image_url %>
 <%= @user.menus.count %>
+
+<%= @user.estimates %>
+<%= render 'estimates/estimate_form' %>
