--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,3 +24,11 @@ li{
   color: #fff;
   text-decoration: none;
 }
+
+.link_black{
+  color: #000;
+}
+
+.link_black:hover{
+  text-decoration: none;
+}
