--- a/app/views/estimates/_estimate.html.erb
+++ b/app/views/estimates/_estimate.html.erb
@@ -1,4 +1,4 @@
-<%= link_to estimate do %>
+<%= link_to estimate, class:"link_black" do%>
   <li class="panel panel-default">
     <div class="container">
       <h3>イベント名：<%= estimate.name %></h3>
