--- a/app/views/menus/_menu.html.erb
+++ b/app/views/menus/_menu.html.erb
@@ -1,7 +1,7 @@
 <div id="menu_<%=menu.id%>" class="col-md-4">
   <li class="panel panel-default">
     <div class="panel panel-heading">
-      <span><%= menu.author %></span>
+      <%= link_to menu.author, menu ,class: "link_black"%>
       <%= link_to menu, method: :delete, data: { confirm: "削除しますか?"}, remote: true  do %>
         <span class="glyphicon glyphicon-trash pull-right"></span>
       <% end %>
