--- a/app/views/estimates/_estimate.html.erb
+++ b/app/views/estimates/_estimate.html.erb
@@ -4,5 +4,7 @@
       <h3>イベント名：<%= estimate.name %></h3>
       <h3>期間：<%= estimate.term %></h3>
     </div>
+    <%= link_to "Edit", edit_estimate_path(estimate), remote: true, class: "btn btn-default" %>
+    <%= link_to "Delete", estimate, method: :delete, remote: true, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
   </li>
 <% end %>
