--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,7 @@
       <%= @user.menus.count %>
     </section>
     <section>
-      <h3>予算の追加</h3>
-      <%= render 'estimates/estimate_form' %>
+      <%= link_to 'New Product',new_estimate_path, remote: true %>
     </section>
   </div>
 </div>
@@ -16,3 +15,5 @@
   <h1>予算一覧</h1>
   <%= render @estimates_feed %>
 </div>
+
+<div id="estimate-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
